# sem

./: .buildinfo  .coveragerc  .gitignore  .gitmodules  .travis.yml  Makefile  Pipfile  README.md  README.rst  api.html  cli.html  conf.py  contributing.html  detailed-functionality.html  dev.org  dev.txt  examples.html  genindex.html  getting-started.html  gsoc.html  gsoc.md  index.html  index.rst  installation.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  travis.yml
.binder/: postBuild
.github/workflows/: build-and-push-docs.yml  run-tests.yml  test.yml
_modules/: index.html
_modules/sem/: database.html  manager.html  runner.html  utils.html
_sources/: cli.rst.txt  contributing.rst.txt  examples.rst.txt  getting-started.rst.txt  installation.rst.txt
css/: style.css
dashboard/: README.md  __init__.py  run.py  table.py  views.py
dashboard/static/: table.js
dashboard/templates/: table.html
dashboard/templates/js/: table.js
docs/: Makefile  advanced-functionality.rst  advanced-usage.rst  api.rst  cli.rst  conf.py  contributing.rst  detailed-functionality.rst  dev.org  examples.rst  getting-started.rst  index.rst  installation.rst  intro.rst  quick-start.rst
docs/_templates/: home.html  links.html  localtoc.html
examples/: Propagation Samples.ipynb  WiFi Plots.ipynb  aggregation_function.py  cli.sh  conditional_stopping.py  database.py  faster_parsing.py  grid-runner-example.py  logging-example.py  logging_example.py  logging_example2.py  lorawan-parsing-example.py  lorawan_parsing_example.py  multiple-sims.py  one-shot.py  paper_plot.py  param-space.py  param_defaults.py  sensitivity-analysis.py  simple.py  wifi-example.ipynb  wifi-plotting-numpy.py  wifi-plotting-xarray.py  wifi_plotting_new.py  wifi_plotting_xarray.py
res/: semdemo.cast
sem/: __init__.py  cli.py  conditionalrunner.py  database.py  gridrunner.py  logging.py  lptrunner.py  manager.py  parallelrunner.py  run_program.sh  runner.py  slurmrunner.py  utils.py
sem/dashboard/: README.md  __init__.py  dashboard.py  table.py  views.py
sem/dashboard/static/: dashboard.js  table.js
sem/dashboard/templates/: dashboard.html  table.html
tests/: conftest.py  test_cli.py  test_database.py  test_examples.py  test_logging.py  test_manager.py  test_runner.py  test_utils.py
