[tool.poetry]
name = "sem"
version = "0.3.0"
description = "A simulation execution manager for ns-3"
authors = ["Davide Magrin <magrinda@dei.unipd.it>"]
license = "GPL-2.0-only"
readme = "README.md"
repository = "https://github.com/signetlabdei/sem"
homepage = "https://github.com/signetlabdei/sem"
keywords = ["ns-3","simulation","execution"]

[tool.poetry.dependencies]
python = "^3.6.1"
tqdm = "*"
gitpython = "*"
drmaa = "*"
tinydb = "^4.0.0"
xarray = "*"
numpy = "*"
pandas = "*"
click = "*"
salib = "^1.3.8"
Flask = "^2.0.1"
tinydb-smartcache = "^2.0.0"

[tool.poetry.dev-dependencies]
sphinx = "*"
pylint = "*"
sphinxcontrib-napoleon = "*"
pytest-cov = "*"
pytest = "*"
matplotlib = "*"
graphviz = "*"
scipy = "*"
pygments = "*"
pytest-xdist = "*"
importmagic = "*"
flake8 = "*"
check-manifest = "*"
ptvsd = "^4.3.2"
seaborn = "*"

[tool.poetry.scripts]
sem = 'sem:cli'

[build-system]
requires = ["setuptools", "poetry>=0.12"]
build-backend = "poetry.masonry.api"
